# helix-db

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  README.md  clippy_check.sh
hbuild_redeploy/: Cargo.toml
hbuild_redeploy/src/: main.rs
hbuild_redploy/: Cargo.toml
hbuild_redploy/src/: main.rs
helix-cli/: Cargo.toml  build.sh  install.sh
helix-cli/helixdb-cfg/: queries.hx  schema.hx
helix-cli/src/: args.rs  docker_dev_manager.rs  instance_manager.rs  main.rs  types.rs  utils.rs
helix-container/: Cargo.toml  Dockerfile  docker-compose.yml
helix-container/helixdb-cfg/: queries.hx  schema.hx
helix-container/src/: embedding_providers.rs  graphvis.html  graphvis.rs  main.rs  nodes.json  queries.rs  schema.hx
helix-db/: Cargo.toml  mod.rs
helix-db/benches/: bm25_benches.rs  hnsw_benches.rs
helix-db/src/: grammar.pest  lib.rs
helix-db/src/helix_engine/: macros.rs  mod.rs  types.rs
helix-db/src/helix_engine/bm25/: README.md  bm25.rs  bm25_tests.rs
helix-db/src/helix_engine/graph_core/: config.rs  graph_core.rs  mod.rs  traversal_iter.rs  traversal_tests.rs
helix-db/src/helix_engine/graph_core/ops/: g.rs  mod.rs  tr_val.rs  version_info.rs
helix-db/src/helix_engine/graph_core/ops/bm25/: hybrid_search_bm25.rs  mod.rs  search_bm25.rs
helix-db/src/helix_engine/graph_core/ops/in_/: in_.rs  in_e.rs  mod.rs  to_n.rs  to_v.rs
helix-db/src/helix_engine/graph_core/ops/source/: add_e.rs  add_n.rs  e_from_id.rs  e_from_type.rs  mod.rs  n_from_id.rs  n_from_index.rs  n_from_type.rs  v_from_id.rs
helix-db/src/helix_engine/graph_core/ops/util/: dedup.rs  drop.rs  exist.rs  filter_mut.rs  filter_ref.rs  map.rs  mod.rs  order.rs  paths.rs  props.rs  range.rs  update.rs
helix-db/src/helix_engine/graph_core/ops/vectors/: brute_force_search.rs  insert.rs  search.rs
helix-db/src/helix_engine/storage_core/: engine_wrapper.rs  graph_visualization.rs  mod.rs  storage_core.rs  storage_methods.rs
helix-db/src/helix_engine/storage_core/engine_wrappers/: lmdb_wrapper.rs  mod.rs  rocksdb_wrapper.rs  wrapper_tests.rs
helix-db/src/helix_engine/tests/: hnsw_tests.rs  mod.rs  traversal_tests.rs  vector_tests.rs
helix-db/src/helix_engine/tests/traversal_tests/: count_tests.rs  drop_tests.rs  edge_traversal_tests.rs  filter_tests.rs  mod.rs  node_traversal_tests.rs  range_tests.rs  remapping_tests.rs  secondary_index_tests.rs  shortest_path_tests.rs  update_tests.rs  util_tests.rs  vector_traversal_tests.rs
helix-db/src/helix_engine/traversal_core/: config.rs  mod.rs  traversal_iter.rs  traversal_tests.rs  traversal_value.rs
helix-db/src/helix_engine/traversal_core/ops/: g.rs
helix-db/src/helix_engine/traversal_core/ops/bm25/: hybrid_search_bm25.rs  search_bm25.rs
helix-db/src/helix_engine/traversal_core/ops/in_/: in_.rs  (+3 more)
helix-db/src/helix_engine/vector_core/: hnsw.rs  hnsw_tests.rs  mod.rs  utils.rs  vector.rs  vector_core.rs  vector_distance.rs  vector_tests.rs
helix-db/src/helix_gateway/: format.rs  gateway.rs  introspect_schema.rs  mod.rs
helix-db/src/helix_gateway/_connection/: connection.rs
helix-db/src/helix_gateway/builtin/: all_nodes_and_edges.rs  mod.rs  node_by_id.rs  node_connections.rs  nodes_by_label.rs
helix-db/src/helix_gateway/connection/: connection.rs
helix-db/src/helix_gateway/embedding_providers/: embedding_providers.rs
helix-db/src/helix_gateway/graphvis/: mod.rs
helix-db/src/helix_gateway/mcp/: mcp.rs  mod.rs  tools.rs  tools_tests.rs
helix-db/src/helix_gateway/router/: dynamic.rs  mod.rs  router.rs
helix-db/src/helix_gateway/thread_pool/: mod.rs
helix-db/src/helix_gateway/worker_pool/: mod.rs
helix-db/src/helixc/: PLAN.md  bin_template.rs  mod.rs  prelude.rs
helix-db/src/helixc/analyzer/: analyzer.rs  analyzer_tests.rs  diagnostic.rs  error_codes.rs  errors.rs  mod.rs  pretty.rs  types.rs  utils.rs
helix-db/src/helixc/analyzer/methods/: exclude_validation.rs  graph_step_validation.rs  infer_expr_type.rs  migration_validation.rs  mod.rs  object_validation.rs  query_validation.rs  schema_methods.rs  statement_validation.rs  traversal_validation.rs
helix-db/src/helixc/generator/: bool_op.rs  generator_tests.rs  generator_types.rs  migrations.rs  mod.rs  object_remapping_generation.rs  queries.rs  return_values.rs  schemas.rs  source_steps.rs  statements.rs  traversal_steps.rs  utils.rs
helix-db/src/helixc/parser/: helix_parser.rs  mod.rs  parser_methods.rs  parser_tests.rs
helix-db/src/protocol/: date.rs  error.rs  format.rs  item_serdes.rs  mod.rs  remapping.rs  request.rs  response.rs  return_values.rs  value.rs
helix-db/src/utils/: count.rs  filterable.rs  id.rs  items.rs  label_hash.rs  mod.rs  styled_string.rs  tqdm.rs
helixdb/: Cargo.toml
helixdb/src/: grammar.pest  lib.rs
helixdb/src/helix_engine/: macros.rs  types.rs
helixdb/src/helix_engine/bm25/: bm25.rs  bm25_tests.rs
helixdb/src/helix_engine/graph_core/: config.rs  graph_core.rs  traversal_iter.rs  traversal_tests.rs
helixdb/src/helix_engine/graph_core/ops/: tr_val.rs
helixdb/src/helix_engine/storage_core/: graph_visualization.rs  storage_core.rs  storage_methods.rs
helixdb/src/helix_engine/vector_core/: hnsw.rs  hnsw_tests.rs  mod.rs  vector.rs  vector_core.rs  vector_distance.rs  vector_tests.rs
helixdb/src/helix_gateway/: gateway.rs  mod.rs
helixdb/src/helix_gateway/embedding_providers/: embedding_providers.rs  mod.rs
helixdb/src/helix_gateway/mcp/: mcp.rs  tools.rs
helixdb/src/helix_gateway/router/: dynamic.rs  mod.rs  router.rs
helixdb/src/helix_gateway/thread_pool/: thread_pool.rs
helixdb/src/helixc/analyzer/: analyzer.rs  types.rs
helixdb/src/helixc/generator/: bool_op.rs  generator_tests.rs  generator_types.rs  source_steps.rs  traversal_steps.rs  utils.rs
helixdb/src/helixc/parser/: helix_parser.rs  mod.rs  parser_tests.rs
helixdb/src/protocol/: date.rs  id.rs  items.rs  mod.rs  request.rs  response.rs  return_values.rs  value.rs
helixdb/src/providers/: embedding_providers.rs  mod.rs  types.rs
helixdb/src/utils/: count.rs  mod.rs  styled_string.rs
metrics/: Cargo.toml
metrics/src/: events.rs  lib.rs
(+208 files in other folders)
