[workspace]
members = [
    "helixdb",
    "helix-container",
    "get_routes",
    "debug_trace",
    "helix-cli",
    "hbuild",
    "hbuild_redploy",
    "query-container",
]
resolver = "2"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
lto = false
opt-level = 0
codegen-units = 256
incremental = true
panic = "abort"
debug = 1
