[workspace]
members = [
    "helix-db",
    "helix-container",
    "helix-macros",
    "helix-cli",
    "hql-tests"
]
resolver = "2"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
lto = false
opt-level = 0
codegen-units = 256
incremental = true
panic = "abort"
debug = 1
