[package]
name = "hbuild_redploy"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"