[package]
name = "helix-db"
version = "1.0.119"
edition = "2024"
description = "HelixDB is a powerful, open-source, graph-vector database built in Rust for intelligent data storage for RAG and AI."
license = "AGPL-3.0"
authors = ["HelixDB Team"]
repository = "https://github.com/HelixDB/helix-db"

[dependencies]
# HelixDB dependencies
helix-macros = { path = "../helix-macros" }

# External dependencies
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.110"
bincode = "1.3.3"                                                  # TODO: Figure out bincode 2 impl with current serde impl
sonic-rs = "0.5.0"
inventory = "0.3.16"
twox-hash = "2.1.0"

uuid = { version = "1.12.1", features = ["v4", "v6", "fast-rng"] }
rand = "0.9.0"
chrono = "0.4.39"
flume = "0.11.1"
itertools = "0.14.0"
tempfile = "3.20.0"
paste = "1.0.15"

# Storage dependencies
heed3 = { version = "0.22.0", optional = true }
rocksdb = { version = "0.23.0", optional = true }
skipdb = { version = "0.2.1", optional = true }
num_cpus = { version = "1.10.0", optional = true }
txn-core = { version = "0.1.3", optional = true }

# Compiler dependencies
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }

# Embedding dependencies
reqwest = { version = "0.12.15", features = [
    "json",
    "blocking",
], optional = true }
url = { version = "2.5", optional = true }
tokio-util = { version = "0.7.15", features = ["compat"] }

[dev-dependencies]
rand = "0.9.0"
lazy_static = "1.4.0"
polars = { version = "0.46.0", features = ["parquet", "lazy", "json"] }
kdam = "0.3"

[features]
debug-output = ["helix-macros/debug-output"]
compiler = ["pest", "pest_derive"]

# vector features
cosine = []
embed_local = ["reqwest", "url"]
embed_openai = ["reqwest"]

# storage features
rocks = ["rocksdb", "num_cpus"]
lmdb = ["heed3"]
in_memory = ["skipdb", "txn-core"]

build = ["compiler"]
vectors = ["cosine", "embed_openai"]
server = ["build", "compiler", "vectors"]
full = ["build", "compiler", "vectors"]
dev = ["debug-output", "server"]
default = ["server", "lmdb"]
