[package]
name = "helix-db"
version = "1.0.135"
edition = "2024"
description = "HelixDB is a powerful, open-source, graph-vector database built in Rust for intelligent data storage for RAG and AI."
license = "AGPL-3.0"
authors = ["HelixDB Team"]
repository = "https://github.com/HelixDB/helix-db"

[dependencies]
# HelixDB dependencies
helix-macros = { path = "../helix-macros" }
helix-metrics = { path = "../metrics" }

# external dependencies
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"                                                  # TODO: Figure out bincode 2 impl with current serde impl
sonic-rs = "0.5.0"
inventory = "0.3.16"
twox-hash = "2.1.0"
heed3 = "0.22.0"
uuid = { version = "1.12.1", features = ["v4", "v6", "fast-rng"] }
rand = "0.9.0"
chrono = "0.4.39"
flume = { version = "0.11.1", default-features = false, features = ["async", "select"] }
itertools = "0.14.0"
tempfile = "3.20.0"
paste = "1.0.15"

# compiler dependencies
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }

# embedding dependencies
reqwest = { version = "0.12.15", features = [
    "json",
    "blocking",
], optional = true }
url = { version = "2.5", optional = true }
tokio-util = { version = "0.7.15", features = ["compat"] }
axum = "0.8.4"
tracing = "0.1.41"
core_affinity = "0.8.3"
async-trait = "0.1.88"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.9.0"
lazy_static = "1.4.0"
polars = { version = "0.46.0", features = ["parquet", "lazy", "json"] }
kdam = "0.3"
num_cpus = "1.17"                                                       # TODO: write ourselves

[features]
debug-output = ["helix-macros/debug-output"]
compiler = ["pest", "pest_derive"]

# vector features
cosine = []

build = ["compiler"]
vectors = ["cosine", "url"]
server = ["build", "compiler", "vectors", "reqwest"]
full = ["build", "compiler", "vectors"]
dev = ["debug-output", "server"]
dev-instance = []
default = ["server"]

# benches/tests
[[test]]
name = "bm25_benches"
path = "benches/bm25_benches.rs"

[[test]]
name = "hnsw_benches"
path = "benches/hnsw_benches.rs"
