[package]
name = "helixdb"
version = "1.0.111"
edition = "2024"
description = "HelixDB is a multi-model database built for performance and simplicity."
license = "AGPL-3.0"
authors = ["HelixDB Team"]
repository = "https://github.com/HelixDB/helix-db"

[dependencies]
# Local dependencies
proc_macros = { version = "0.1.1", path = "../proc_macros" }

# External dependencies
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.110"
bincode = "1.3.3"                                                         # TODO: Figure out bincode 2 impl with current serde impl
sonic-rs = "0.5.0"
inventory = "0.3.16"
twox-hash = "2.1.0"
heed3 = "0.22.0"
uuid = { version = "1.12.1", features = ["v4", "v6", "fast-rng"] }
rand = "0.9.0"
chrono = "0.4.39"
flume = "0.11.1"
itertools = "0.14.0"
tempfile = "3.20.0"

# Compiler dependencies
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }

# Embedding dependencies
reqwest = { version = "0.12.15", features = [ "json", "blocking"], optional = true }
url = { version = "2.5", optional = true }

[dev-dependencies]
rand = "0.9.0"
lazy_static = "1.4.0"
polars = { version = "0.46.0", features = ["parquet", "lazy", "json"] }
kdam = "0.3"

[features]
debug-output = ["proc_macros/debug-output"]
compiler = ["pest", "pest_derive"]

# vector features

cosine = []
embed_local = ["reqwest", "url"]
embed_openai = ["reqwest"]

build = ["compiler"]
vectors = ["cosine", "embed_openai"]
server = ["build", "compiler", "vectors"]
full = ["build", "compiler", "vectors"]
dev = ["debug-output", "server"]
default = ["server"]

