[package]
name = "metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.11"
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5.3"
chrono = "0.4"
uuid = { version = "1.18.0", features = ["v7", "fast-rng"] }
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1.88"